--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apollo-link": "^1.2.11",
     "graphql": "^14.5.0",
     "graphql-tag": "^2.10.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
